{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 38,
  "lineage": "7175699a-319c-a4c8-5a54-23e4ba1a7a69",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-25T23:24:34.046-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/splunkadmin-448709/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/networks/terraform-network",
            "priority": 1000,
            "project": "splunkadmin-448709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-25T23:47:02.552-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/splunkadmin-448709/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/networks/terraform-network",
            "priority": 1000,
            "project": "splunkadmin-448709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_oltp_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4317",
                  "4318"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-26T18:16:40.476-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/splunkadmin-448709/global/firewalls/allow-oltp-ingress",
            "log_config": [],
            "name": "allow-oltp-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/networks/terraform-network",
            "priority": 1000,
            "project": "splunkadmin-448709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/firewalls/allow-oltp-ingress",
            "source_ranges": [
              "10.148.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "otel-collector"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-25T23:47:03.443-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/splunkadmin-448709/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/networks/terraform-network",
            "priority": 1000,
            "project": "splunkadmin-448709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "admin-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "source_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250213",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/zones/asia-southeast1-c/disks/source1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "creation_timestamp": "2025-02-26T18:16:42.015-08:00",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/splunkadmin-448709/zones/asia-southeast1-c/instances/source1",
            "instance_id": "1171299818800313830",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "SPLUNK_ACCESS_TOKEN": "_8-K8tTSy4wAONIMHGdLJA"
            },
            "metadata_fingerprint": "bGPtJQs-ZEo=",
            "name": "source1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/networks/terraform-network",
                "network_ip": "10.148.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/regions/asia-southeast1/subnetworks/terraform-network",
                "subnetwork_project": "splunkadmin-448709"
              }
            ],
            "project": "splunkadmin-448709",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/zones/asia-southeast1-c/instances/source1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "admin-access",
              "web-server"
            ],
            "tags_fingerprint": "1BKhI-2tz1A=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "SPLUNK_ACCESS_TOKEN",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.google_secret_manager_secret_version.splunk_access_token",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "splunk_collector",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250213",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/zones/asia-southeast1-c/disks/splunk-collector"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "creation_timestamp": "2025-02-26T18:34:46.960-08:00",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/splunkadmin-448709/zones/asia-southeast1-c/instances/splunk-collector",
            "instance_id": "8583846332934025641",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "SPLUNK_ACCESS_TOKEN": "_8-K8tTSy4wAONIMHGdLJA"
            },
            "metadata_fingerprint": "rPuqwcU1ei8=",
            "metadata_startup_script": "set -x\n#!/bin/bash\nexport SPLUNK_REALM=\"jp0\"\nexport SPLUNK_MEMORY_TOTAL_MIB=\"512\"\n\n# Read the secret from instance metadata\nexport SPLUNK_ACCESS_TOKEN=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/instance/attributes/SPLUNK_ACCESS_TOKEN\" -H \"Metadata-Flavor: Google\")\n\n# Download the Splunk OpenTelemetry Collector script and run it\ncurl -sSL https://dl.signalfx.com/splunk-otel-collector.sh -o /tmp/splunk-otel-collector.sh\n\ [...]
            "name": "splunk-collector",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/networks/terraform-network",
                "network_ip": "10.148.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/regions/asia-southeast1/subnetworks/terraform-network",
                "subnetwork_project": "splunkadmin-448709"
              }
            ],
            "project": "splunkadmin-448709",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/zones/asia-southeast1-c/instances/splunk-collector",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "admin-access",
              "otel-collector",
              "web-server"
            ],
            "tags_fingerprint": "XCAhBqcbSSA=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "SPLUNK_ACCESS_TOKEN",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.google_secret_manager_secret_version.splunk_access_token",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/splunkadmin-448709/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6845511281119821715",
            "numeric_id": "6845511281119821715",
            "project": "splunkadmin-448709",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/splunkadmin-448709/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}